# ==============================================================================
# README
# ==============================================================================

# ------------------------------------------------------------------------------
# CMAKE PROPERTIES
# ------------------------------------------------------------------------------

# CMake version
cmake_minimum_required( VERSION 2.8 )

# Output verbosity
set( CMAKE_VERBOSE_MAKEFILE "ON" )


# ------------------------------------------------------------------------------
# PROJECT PROPERTIES
# ------------------------------------------------------------------------------


# Project name
project( OpenDHCPServer CXX )

set(PROJECT_VER_MAJOR 1)
set(PROJECT_VER_MINOR 71)
set(PROJECT_VER_PATCH 0)

# ------------------------------------------------------------------------------
# SUBMODULES
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# SOURCE FILES SETUP
# ------------------------------------------------------------------------------

set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

# Include root
set( INC_DIRS
    "${CMAKE_CURRENT_SOURCE_DIR}"
)

include_directories(
    "${INC_DIRS}"
    "${CMAKE_BINARY_DIR}"
)

set( SRC_HEADERS
    "${SRC_DIR}/OpenDHCPServer.h"
)

# Sources
set( SRC_LIB
    "${SRC_DIR}/OpenDHCPServer.cpp"
)


# ------------------------------------------------------------------------------
# TARGETS SETUP
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# LIBRARIES
# ------------------------------------------------------------------------------


# ------------------------------------------------------------------------------
# EXECUTABLES
# ------------------------------------------------------------------------------

add_executable( ${PROJECT_NAME} 
    ${SRC_HEADERS}
    ${SRC_LIB}
)


# ------------------------------------------------------------------------------
# INSTALLATION
# ------------------------------------------------------------------------------

